2004-12-13  Andrew Pinski  <pinskia@physics.uc.edu>

PR c++/18968
        * g++.dg/opt/pr18968.C: New test.

2004-12-13  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c++/18968
        * class.c (build_base_path): Convert the zero constant to the correct
        type when comparing.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92121 138bc75d-0d04-0410-961f-82ee72b054a4